[package]
name = "aoc_2020"
version = "0.1.0"
authors = ["RoccoDev <hey@rocco.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
regex = "1"
lazy_static = "1"
strum = { version = "0.20", features = ["derive"] }
fxhash = "0.2.1"
itertools = "0.9"